--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "mongo-store": "^0.0.2",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0"
   }
